--- a/client/platformio.ini
+++ b/client/platformio.ini
@@ -7,7 +7,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = /dev/cu.SLAB_USBtoUART
-monitor_port = /dev/cu.SEDS-cube
+monitor_port = /dev/cu.SLAB_USBtoUART
+#monitor_port = /dev/cu.SEDS-cube
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
